--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "axios": "^1.6.2",
+    "chalk": "^4.1.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-bearer-token": "^2.4.0",
     "form-data": "^4.0.0",
+    "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
